the release notes, as we make them, to make the release process easier.

Next version:

2.3 (2013-??-??):

* add support for OpenXPS documents
* "Go To Page" for ebook format
* fixed paragraph indentation missing for EPUB documents
* new key bindings:
  * Ctrl-Up   : page up
  * Ctrl-Down : page down
* support Deflate64 in Comic Book (CBZ) files

2.2.1 (2013-01-12):

* fixed ebooks sometimes not remembering the viewing position
* fixed Sumatra not exiting when opening files from a network drive
* fixes for most frequent crashes, PDF parsing robustness fixes and
  regressions from 2.1.1 introduced in 2.2

2.2 (2012-12-24):

* add support for FictionBook ebook format
* add support for PDF documents encrypted with Acrobat X
* “Print as image” compatibility option for documents that fail to print properly
* -manga-mode [1|true|0|false] for proper display of manga comic books
* fixed a reuse-after-free crash reported by John Leitch from
  Microsoft Vulnerability Research (MSVR)
* fixed multiple crashes caused by overflows

2.1.1 (2012-05-07):

* fix a couple of crashes, most importantly crash when resizing some ePub files

2.1 (2012-05-03):

* support for EPUB ebook format
* added menu item to rename a file (contributed by Vasily Fomin)
* support multi-page TIFF files
* support TGA images
* support for some comic book (CBZ) metadata
* support JPEG XR images (available on Windows Vista or later,
  for Windows XP the Windows Imaging Component has to be installed)
* fixed multiple heap overflows reported by John Leitch from
  Microsoft Vulnerability Research (MSVR) and by Carlo Di Dato (aka shinnai)
* the installer is now signed

2.0.1 (2012-04-08):

* fix loading .mobi files from command line
* fix a crash loading multiple .mobi files at once
* fix a crash showing tooltips for table of contents tree entries

2.0 (2012-04-02):

* support for mobi ebook format
* we can now open CHM documents from network drives
* images from documents can be copied from the context menu